--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   },
   "homepage": "https://github.com/ManoelGomes/api-tarefas-default#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "save": "^2.4.0",
